# mediabin-python

./: README.md  main.py  pyproject.toml
migrations/: 001_initial_migration_down.sql  001_initial_migration_up.sql
scripts/: migrate.py
src/mediabin/: cli.py  coloring.py  daemon.py  mediabin_daemon.py  migrate.py  server.py
src/mediabin/daemon/: __init__.py  daemon.py
src/mediabin/migration/: __init__.py  migrate.py
src/mediabin/migration/versions/: 001_initial_migration_up.sql
src/mediabin/ytdlp_downloader/: README.md  __init__.py  downloader.py
