[project]
name = "mediabin-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "typer>=0.17.4",
    "yt-dlp>=2025.9.5",
    "tqdm>=4.66.2",
]

[project.scripts]
mb = "mediabin.cli:app"

[tool.setuptools.package-data]
"mediabin" = ["migration/versions/*.sql"]
