[project]
name = "mediabin-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb==1.3.2",
    "yt-dlp==2025.9.5",
    "click==8.2.1",
]

[project.scripts]
mb = "mediabin.cli:main"

[tool.setuptools.package-data]
"mediabin" = ["migration/versions/*.sql"]
